feat : the lists will now show live projects

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <button id="check-btn">Get Info</button>
     <img id="avatar" src="" />
-    <p id="repo-heading">Repositories in this GitHub account</p>
+    <p id="repo-heading">Live Projects in this GitHub account</p>
     <div id="output"></div>
 
     <script src="/script.js"></script>
