refactor index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="heading">GITHUB INFO FETCHER</h1>
     <p id="text">Enter Username here : <input type="text" id="username" /></p>
     <div id="notice">
-      Username is Case Sensitive.<br />
+      Github username is Case Sensitive.<br />
       Please enter the correct username only !
     </div>
     <button id="check-btn">Get Info</button>
